--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -55px;
+               margin-top: 243px;
                display: block;
           }
           .price1:hover{
@@ -264,22 +264,8 @@
                color: #ffffff;
                text-align: center;
           }
-          .black{
-               width: 272.31px;
-               height: 293.41px;
-               background-color: #4c4c4c;
-               opacity: 0.9; 
-               margin-top: -293.41px;
-               display: none;
-          }
-          .black:hover{
-               display: block;
-          }
-          .black p{
-               color: #ffffff;
-               text-align: center;
-          }
           .two{
+               background-image: url(imgs/img2.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -296,7 +282,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -50px;
+               margin-top: 243px;
                display: block;
           }
           .price2:hover{
@@ -308,6 +294,7 @@
                text-align: center; 
           }
           .three{
+               background-image: url(imgs/img3.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -324,7 +311,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -23px;
+               margin-top: 243px;
                display: block;
           }
           .price3:hover{
@@ -336,6 +323,7 @@
                text-align: center;
           }
           .four{
+               background-image: url(imgs/img4.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -352,7 +340,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -42px;
+               margin-top: 243px;
                display: block;
           }
           .price4:hover{
@@ -364,6 +352,7 @@
                text-align: center;
           }
           .five{
+               background-image: url(imgs/img5.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -380,7 +369,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -49px;
+               margin-top: 243px;
                display: block;
           }
           .price5:hover{
@@ -392,6 +381,7 @@
                text-align: center;
           }
           .six{
+               background-image: url(imgs/img6.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -408,7 +398,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -48px;
+               margin-top: 243px;
                display: block;
           }
           .price6:hover{
@@ -420,6 +410,7 @@
                text-align: center;
           }
           .seven{
+               background-image: url(imgs/img7.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -436,7 +427,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -45px;
+               margin-top: 243px;
                display: block;
           }
           .price7:hover{
@@ -448,6 +439,7 @@
                text-align: center;
           }
           .eight{
+               background-image: url(imgs/img8.png);
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -464,7 +456,7 @@
                height: 51px;
                background-color: #4c4c4c;
                opacity: 0.9;
-               margin-top: -40px;
+               margin-top: 243px;
                display: block;
           }
           .price8:hover{
@@ -634,60 +626,49 @@
  	</div>
  	<div class="main">
  	 	<div class="one">
-
                <div class="price1">
                     <p>竞猜价：¥   399.00</p>
                     <p>翡翠千手观音吊坠</p>
                </div>
-               <div class="black">
-                    <p>竞猜价：¥   399.00</p>
-                    <p>翡翠千手观音吊坠</p>
-               </div>
+               
  	 	</div>
           <div class="two">
-               <img src="imgs/img2.png">
                <div class="price2">
                     <p>竞猜价：¥   1980.00</p>
                     <p>翡翠龙凤吊坠</p>
                </div>
           </div>
           <div class="three">
-               <img src="imgs/img3.png">
                <div class="price3">
                     <p>竞猜价：¥   199.00</p>
                     <p>翡翠花蕊吊坠</p>
                </div>
           </div>
           <div class="four">
-               <img src="imgs/img4.png">
                <div class="price4">
                     <p>竞猜价：¥   199.00</p>
                     <p>翡翠如意吊坠</p>
                </div>
           </div>
           <div class="five">
-               <img src="imgs/img5.png">
                <div class="price5">
                     <p>竞猜价：¥   99.00</p>
                     <p>翡翠婵吊坠</p>
                </div>
           </div>
           <div class="six">
-               <img src="imgs/img6.png">
                <div class="price6">
                     <p>竞猜价：¥   99.00</p>
                     <p>翡翠观音(浅色)吊坠</p>
                </div>
           </div>
           <div class="seven">
-               <img src="imgs/img7.png">
                <div class="price7">
                     <p>竞猜价：¥   199.00</p>
                     <p>翡翠平安扣(深色)吊坠</p>
                </div>
           </div>
           <div class="eight">
-               <img src="imgs/img8.png">
                <div class="price8">
                     <p>竞猜价：¥   199.00</p>
                     <p>翡翠如意吊坠</p>
