--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
      	}
           .one{
                background-image: url(imgs/img1.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -257,7 +259,15 @@
                display: block;
           }
           .price1:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price1:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price1 p{
                font-weight: 14.83px;
@@ -266,6 +276,8 @@
           }
           .two{
                background-image: url(imgs/img2.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -286,7 +298,15 @@
                display: block;
           }
           .price2:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price2:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price2 p{
                font-weight: 14.83px;
@@ -295,6 +315,8 @@
           }
           .three{
                background-image: url(imgs/img3.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -315,7 +337,15 @@
                display: block;
           }
           .price3:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price3:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price3 p{
                font-weight: 14.83px;
@@ -324,6 +354,8 @@
           }
           .four{
                background-image: url(imgs/img4.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -344,7 +376,15 @@
                display: block;
           }
           .price4:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price4:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price4 p{
                font-weight: 14.83px;
@@ -353,6 +393,8 @@
           }
           .five{
                background-image: url(imgs/img5.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -373,7 +415,15 @@
                display: block;
           }
           .price5:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price5:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price5 p{
                font-weight: 14.83px;
@@ -382,6 +432,8 @@
           }
           .six{
                background-image: url(imgs/img6.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -402,7 +454,15 @@
                display: block;
           }
           .price6:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price6:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price6 p{
                font-weight: 14.83px;
@@ -411,6 +471,8 @@
           }
           .seven{
                background-image: url(imgs/img7.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -431,7 +493,15 @@
                display: block;
           }
           .price7:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price7:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price7 p{
                font-weight: 14.83px;
@@ -440,6 +510,8 @@
           }
           .eight{
                background-image: url(imgs/img8.png);
+               background-repeat: no-repeat;
+               background-position: center;
                width: 272.31px;
                height: 293.41px;
                border: 1px solid #878787;
@@ -460,7 +532,15 @@
                display: block;
           }
           .price8:hover{
-               display: none;
+               margin-top: 0px;
+               width: 272.31px;
+               height: 293.41px;
+               font-size: 22px;
+          }
+          .price8:hover p{
+               position: relative;
+               top: 117px;
+               margin-bottom: 20px;
           }
           .price8 p{
                font-weight: 14.83px;
@@ -630,7 +710,6 @@
                     <p>竞猜价：¥   399.00</p>
                     <p>翡翠千手观音吊坠</p>
                </div>
-               
  	 	</div>
           <div class="two">
                <div class="price2">
